# dclaw-med

./: .env.example  .gitignore  AGENTS.md  PLAN-v1.2.md  README.md  REVISED-PRD.md  docker-compose.yml  plan_v1.3.md
backend/: .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2026_05_08_0001_initial.py  2026_05_12_0002_users.py  2026_05_12_0003_audit_logs.py  2026_05_12_0004_lab_results.py  2026_05_12_0005_appointments.py  2026_05_15_0006_allergies.py  2026_05_15_0007_patient_search.py  2026_05_15_0008_user_patient_link.py
backend/app/api/: main.py
backend/app/core/: audit_middleware.py  auth.py  config.py  database.py  deps.py  dialect.py  logging.py  request_id.py  security.py
backend/app/models/: __init__.py  allergy.py  appointment.py  audit_log.py  base.py  clinical_note.py  diagnosis.py  lab_result.py  patient.py  prescription.py  symptom.py  user.py
backend/app/repositories/: allergy_repo.py  appointment_repo.py  audit_log_repo.py  clinical_note_repo.py  diagnosis_repo.py  lab_result_repo.py  patient_repo.py  prescription_repo.py  symptom_repo.py  user_repo.py
backend/app/schemas/: allergy.py  appointment.py  audit_log.py  (+8 more)
backend/scripts/: dev.sh  seed_admin.py  seed_dev.py  smoke_llm_analyzer.py
backend/tests/: conftest.py  test_allergies.py  test_appointments.py  test_audit.py  test_auth.py  test_fhir.py  test_lab_results.py  test_patient_portal.py  test_patient_report.py  test_patients_search.py  test_router_guards.py  test_symptoms_analyze.py  test_triage.py
(+102 files in other folders)
